--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,27 @@
-server.port=8082
-#			protocol:db type:location:db name
-spring.datasource.url=jdbc:mysql://localhost:3306/tbr
+#server.port=8082
+##			protocol:db type:location:db name
+#spring.datasource.url=jdbc:mysql://localhost:3306/tbr
+#spring.datasource.username=root
+#spring.datasource.password=root
+##enables the h2 console at localhost:8081/h2-console
+##spring.h2.console.enabled=true
+##spring.h2.console.path=/h2-console
+##run it once as create then leave it on validate until you change it
+#spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.hibernate.ddl-auto=validate
+
+
+server.port = 8082
+#					protocol:db type:location:db name
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/lloyds_db
 spring.datasource.username=root
 spring.datasource.password=root
-#enables the h2 console at localhost:8081/h2-console
+#spring.datasource.username=sa
+#spring.datasource.password=
+# enables the h2 console at localhost:8081/h2-console
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-#run it once as create then leave it on validate until you change it
+#spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=validate
