--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 server.port = 8082
 #					protocol:db type:location:db name
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:mysql://localhost:3306/lloyds_db
+spring.datasource.url=jdbc:mysql://localhost:3306/tbr
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.username=sa
